--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,10 +41,10 @@ services:
     build: ./DefectDojo/nginx/
     ports:
       - "80:80"
-      - "443:443"
+      - "8443:443"
     expose:
       - "80"
-      - "443"
+      - "8443"
     environment:
      - DH_SIZE=512
     volumes_from:
@@ -68,7 +68,7 @@ services:
       - StackStorm/conf/redis.env
     ports:
       #- "443:443"  -> clash with port 443 for Nginx service
-      - 444:444
+      - 443:443
     networks:
       - public
       - private
@@ -77,7 +77,7 @@ services:
       - stackstorm-virtualenvs-volume:/opt/stackstorm/virtualenvs
       - stackstorm-configs-volume:/opt/stackstorm/configs
       - stackstorm-log-volume:/var/log
-      #- ./packs.dev:/opt/stackstorm/packs.dev
+      - ./StackStorm/packs.dev:/opt/stackstorm/packs.dev
       - ./StackStorm/runtime/entrypoint.d:/st2-docker/entrypoint.d
       - ./StackStorm/runtime/st2.d:/st2-docker/st2.d
       - ./StackStorm/conf/stackstorm.env:/st2-docker/env
