--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,6 +126,10 @@ services:
       - redis-volume:/data
     dns_search: .
 
+### Tool Chain Services
+
+  # nmap doesn't need to be started. Only run as needed.
+
 volumes:
 
 ### DefectDojo Volumes
