--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,8 @@ services:
       - ./StackStorm/runtime/entrypoint.d:/st2-docker/entrypoint.d
       - ./StackStorm/runtime/st2.d:/st2-docker/st2.d
       - ./StackStorm/conf/stackstorm.env:/st2-docker/env
+      # mount Tool Chain content
+      - ./scripts:/st2-docker/scripts
     dns_search: .
 
 ### StackStorm External Services
