updating StackStorm actions config, action script and adding testing/exceptions heading in README

--- a/StackStorm/packs.dev/banzai/actions/ddojo_import_pythonrunner.yaml
+++ b/StackStorm/packs.dev/banzai/actions/ddojo_import_pythonrunner.yaml
@@ -1,6 +1,6 @@
 ---
 name: "dojo_import"
-runner_type: "python-script"
+runner_type: "local-shell-cmd"
 description: "Import test scan results into DefectDojo"
 entry_point: "action_scripts/ddojo_import.py"
 parameters:
@@ -8,3 +8,4 @@ parameters:
     default: "python ddojo_import.py"
   timeout:
     default: 99999
+
