--- a/StackStorm/packs.dev/banzai/actions/ddojo_import.yaml
+++ b/StackStorm/packs.dev/banzai/actions/ddojo_import.yaml
@@ -1,11 +1,4 @@
----
 name: "dojo_import"
-runner_type: "local-shell-cmd"
+runner_type: "python-script"
 description: "Import test scan results into DefectDojo"
 entry_point: "action_scripts/ddojo_import.py"
-parameters:
-  cmd:
-    default: "python ddojo_import.py"
-  timeout:
-    default: 99999
-
