--- a/StackStorm/packs.dev/banzai/actions/ddojo_import.yaml
+++ b/StackStorm/packs.dev/banzai/actions/ddojo_import.yaml
@@ -2,3 +2,7 @@ name: "dojo_import"
 runner_type: "python-script"
 description: "Import test scan results into DefectDojo"
 entry_point: "action_scripts/ddojo_import.py"
+
+# NOTE
+# "python-script" runner type must be used for python scripts, as it takes advantage of the python virtualenv.
+# Else using a runner type such as "local-shell-cmd" will lack required packages to run python scripts.
