--- a/StackStorm/packs.dev/banzai/actions/chains/nmap_chain.yaml
+++ b/StackStorm/packs.dev/banzai/actions/chains/nmap_chain.yaml
@@ -1,23 +1,20 @@
+# This workflow is executed by the banzai.action_chain action
 ---
     chain:
         -
             name: "c1"
             ref: "banzai.nmap"
             parameters:
-                cmd: "echo c1"
+               url: "{{ url }}"
             on-success: "c2"
             on-failure: "c3"
         -
             name: "c2"
             ref: "banzai.dojo_import"
-            #parameters:
-            #    cmd: "echo \"c2: parent exec is {{action_context.parent.execution_id}}.\""
             # terminate action chain with SUCCESS status
             on-success: ""
-            # exception handling action
             on-failure: "c3"
         -
-            # write a better exception handling case for final build
             name: "c3"
             ref: "core.local"
             parameters:
