--- a/StackStorm/packs.dev/banzai/actions/burp_chain.meta.yaml
+++ b/StackStorm/packs.dev/banzai/actions/burp_chain.meta.yaml
@@ -21,3 +21,6 @@ parameters:
   scantype:
     description: "type of scan"
     required: true
+  startdate:
+    description: "start date for schedule"
+    required: true
