--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
 
   dojo:
     restart: always
+    container_name: dojo
     image: appsecpipeline/django-defectdojo:latest
     ports:
       - "8000:8000"
